Fix Java 11 compatibility by replacing .toList() with .collect(Collectors.toList())
Co-authored-by: mklaiber <67148813+mklaiber@users.noreply.github.com>